# auto-circuit-tests

./: .gitmodules  README.md  compute_act_patch_prune_scores.ipynb  compute_act_patch_prune_scores.py  convert_act_path.sh  convert_find_and_test.sh  find_and_test_circuit.ipynb  find_and_test_circuit.py  pyproject.toml  run_experiments.ipynb
auto_circuit_tests/: auto_circuit_utils.py  edge_graph.py  edge_scores.py  faith_metrics.py  prune_algos.py  score_funcs.py  tasks.py  utils.py
auto_circuit_tests/hypo_tests/: equiv_test.py  indep_test.py  minimality_test.py  utils.py
auto_circuit_tests/utils/: auto_circuit_utils.py  utils.py
