[tool.poetry]
name = "auto-circuit-tests"
version = "0.1.0"
description = ""
authors = ["Oliver Daniels-Koch <danielskoch.oliver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
omegaconf = "^2.3.0"
pytest = "^8.3.2"
nbconvert = "^7.16.4"
kneed = "^0.8.5"
auto-circuit = {path = "auto-circuit", develop = true}
torch = "^2.3.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
